# hit-campus-auto-login

./: .gitattributes  .gitignore  LICENSE  Package.swift  README.md
.github/workflows/: cross-platform.yml
App/: Info.plist
Sources/HITAutoLogin/: AppModel.swift  HITAutoLoginApp.swift  NetworkWorkflow.swift  SrunCrypto.swift
Tests/HITAutoLoginTests/: HITAutoLoginTests.swift
cross-platform/: .gitignore  Cargo.toml  E2E_TEST_RECORD.md  KNOWN_LIMITATIONS.md  README.md
cross-platform/crates/hit-auto-login-app/: Cargo.toml  build.rs
cross-platform/crates/hit-auto-login-app/resources/: windows.manifest  windows.rc
cross-platform/crates/hit-auto-login-app/src/: app.rs  config_store.rs  main.rs
cross-platform/crates/hit-auto-login-app/src/platform/: linux.rs  mod.rs  windows.rs
cross-platform/crates/hit-auto-login-core/: Cargo.toml
cross-platform/crates/hit-auto-login-core/src/: config.rs  connectivity.rs  coordinator.rs  crypto.rs  lib.rs  parsing.rs  portal.rs  workflow.rs
cross-platform/installer/: hit-auto-login.iss
cross-platform/installer/linux/: README.txt  install.sh  uninstall.sh
cross-platform/scripts/: build-linux.sh  build-windows.ps1  install-linux.sh  install-windows.ps1  uninstall-linux.sh  uninstall-windows.ps1  verify-windows-binary.ps1
scripts/: build-app.sh
