[package]
name = "hit-auto-login"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "hit-auto-login"
path = "src/main.rs"

[dependencies]
hit-auto-login-core = { path = "../hit-auto-login-core" }
async-trait = "0.1"
directories = "6"
fs2 = "0.4"
rpassword = "7"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }

[target.'cfg(target_os = "windows")'.dependencies]
native-windows-gui = "1.0"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_NetworkManagement_Ndis",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
futures-util = "0.3"
gtk = "0.18"
ksni = "0.3.5"
zbus = { version = "5", features = ["tokio"] }
